<resources>
    <string name="app_name">Mr. Tap</string>
    <string name="button">SMASH</string>
    <string name="restart">RESTART</string>
    <string name="number_count">0</string>
    <string name="score">SCORE</string>
    <string name="home">Go Home</string>
    <string name="high_score">High Score</string>
    <string name="ten">10 Seconds</string>
    <string name="thrity">30 Seconds</string>
    <string name="minute">1 Minute</string>
    <string name="ten_seconds">10 Second Score: </string>
    <string name="thirty_seconds">30 Second Score: </string>
    <string name="one_minute">1 Minute Score: </string>
</resources>
