<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/backgroundColor"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ten"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="ten"
        android:text="@string/ten"
        android:textColor="@color/white"
        android:background="@color/buttonColor"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/ten_second_high_score_view"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/thrity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="thirty"
        android:text="@string/thrity"
        android:textColor="@color/white"
        android:background="@color/buttonColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/thirty_second_high_score_view"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="minute"
        android:text="@string/minute"
        android:textColor="@color/white"
        android:background="@color/buttonColor"
        app:layout_constraintBaseline_toBaselineOf="@+id/minute_high_score_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ten_second_high_score_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/numberGreen"
        app:layout_constraintBottom_toTopOf="@+id/thirty_second_high_score_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ten" />

    <TextView
        android:id="@+id/thirty_second_high_score_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/numberGreen"
        app:layout_constraintBottom_toTopOf="@+id/minute_high_score_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/thrity" />

    <TextView
        android:id="@+id/minute_high_score_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/numberGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/minute" />
</android.support.constraint.ConstraintLayout>